Адаптив сэкшена catalog(1300px)

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
         </div>
     </div>
 </section>
-<!--
 <section class="catalog">
     <div class="container">
         <h3 class="catalog__title section-title">Каталог круизов</h3>
@@ -92,6 +91,7 @@
             <div class="catalog__items-inner">
                 <div class="catalog__item catalog__item-small discount">
                     <img class="catalog__item-img" src="images/catalog__item-img__2.jpg" alt="">
+                    <img class="catalog__item-img__responsive" src="images/catalog__item-img__2-responsive.jpg" alt="">
                     <div class="catalog__item-textarea">
                         <a class="catalog__item-textarea__title-link" href="#"><h4
                                 class="catalog__item-textarea__title">Обзорная морская прогулка с экскурсией</h4></a>
@@ -105,6 +105,7 @@
                 </div>
                 <div class="catalog__item catalog__item-small discount-num">
                     <img class="catalog__item-img" src="images/catalog__item-img__3.jpg" alt="">
+                    <img class="catalog__item-img__responsive" src="images/catalog__item-img__3-responsive.jpg" alt="">
                     <div class="catalog__item-textarea">
                         <a class="catalog__item-textarea__title-link" href="#"><h4
                                 class="catalog__item-textarea__title">Морская прогулка в Геленджик</h4></a>
@@ -117,8 +118,23 @@
                     </div>
                 </div>
             </div>
+            <div class="catalog__item catalog__item-in catalog__item-small discount-num">
+                <img class="catalog__item-img" src="images/catalog__item-img__3.jpg" alt="">
+                <img class="catalog__item-img__responsive" src="images/catalog__item-img__3-responsive.jpg" alt="">
+                <div class="catalog__item-textarea">
+                    <a class="catalog__item-textarea__title-link" href="#"><h4
+                            class="catalog__item-textarea__title">Морская прогулка в Геленджик</h4></a>
+                    <p class="catalog__item-textarea__field"><span>Маршрут:</span> Сочи-Туапсе-Геленджик</p>
+                    <p class="catalog__item-textarea__field"><span>Продолжительность:</span> 12 ч. 30 мин.</p>
+                    <div class="catalog__item-textarea__prices prices-pack">
+                        <a class="catalog__item-textarea__prices-new" href="#">7 000 руб.</a>
+                        <a class="catalog__item-textarea__prices-old" href="#">10000 руб.</a>
+                    </div>
+                </div>
+            </div>
             <div class="catalog__item catalog__item-middle">
                 <img class="catalog__item-img" src="images/catalog__item-img__4.jpg" alt="">
+                <img class="catalog__item-img__responsive" src="images/catalog__item-img__4-responsive.jpg" alt="">
                 <div class="catalog__item-textarea">
                     <a class="catalog__item-textarea__title-link" href="#"><h4 class="catalog__item-textarea__title">
                         Морской круиз в Новороссийск</h4></a>
@@ -130,7 +146,7 @@
                     </div>
                 </div>
             </div>
-            <div class="catalog__item catalog__item-middle">
+            <div class="catalog__item catalog__item-middle catalog__item-responsive">
                 <img class="catalog__item-img" src="images/catalog__item-img__5.jpg" alt="">
                 <div class="catalog__item-textarea">
                     <a class="catalog__item-textarea__title-link" href="#"><h4 class="catalog__item-textarea__title">
@@ -148,6 +164,7 @@
         </div>
     </div>
 </section>
+<!--
 <form id="card-form" class="card-form mfp-hide white-popup-block">
     <div class="card-form__inner">
         <div class="card-form__photos">
