Адаптив сэкшена footer и формы card-form(1300px)

--- a/index.html
+++ b/index.html
@@ -164,7 +164,6 @@
         </div>
     </div>
 </section>
-<!--
 <form id="card-form" class="card-form mfp-hide white-popup-block">
     <div class="card-form__inner">
         <div class="card-form__photos">
@@ -245,7 +244,7 @@
             </div>
         </div>
     </div>
-</footer>-->
+</footer>
 <script src="js/main.min.js"></script>
 </body>
 </html>
